[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"